v3.0.016:
- Added held start button for offline versus, default is 1.5 seconds, can be changed.
- Added tournament mode for offline, forces 2 round games and 1.5 second start button.

v3.0.015:
- Fixed the super flash overlay glitch on the boss stages.
- Fixed the bug that shows the color select after pressing F4.
- Added an option to view changes before updating.

v3.0.014:
- Fixed alt-enter crash.

v3.0.013:
- Fixed keyboard controls on Linux.
- Fixed bug where you can attack before round start in offline versus.
- Included Erkz stage select graphics fix.

v3.0.012:
- Prevent computer from sleeping or showing screensaver while the game is running.
  (Doesn't work if you use the screensaver option: "On resume, display login screen")
- Fixed the issue where the game doesn't work if it takes too long to startup.
- Fixed mapping buttons not working on the PS4 pad.

v3.0.011:
- Can choose rollback and delay independent from host.
- Automatically trim whitespace when entering IP address.
- Adjusted rollbacks, should have less frame skipping.

v3.0.010:
- Fixed issue with black screen on connect.

v3.0.009:
- Fixed spectator crash.

v3.0.008:
- Possible fix for input drops.

v3.0.007:
- Fix updating problems.
- Fix minor bug with mapping keyboard directions via F4 in-game.
- Allow changing input delay in offline modes.

v3.0.006:
- Clarify text for network delay / input delay.
- Fix crash when exiting caster.

v3.0.005:
- Changed max delay setting to be max real delay.
- Renamed max rollback to be default rollback.

v3.0.004:
- Fix another possible input drop issue.
- Don't adjust FPS when rollback is 4 or less, should be smoother this way.
- Prevent immediately starting in fullscreen mode due to issues.
- Increased delay during character select.

v3.0.003:
- Fixed choosing delay when rollback is 0.

v3.0.002:
- Less inputs drops (hopefully).

v3.0.001:
- Fixed Add_Handler_Protocol.bat
- Adjusted the FPS to be not as fast.

v3.0.000:
- Rollback netcode: